--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,8 +1,74 @@
 @CHARSET "ISO-8859-1";
-body{
+
+body {
 	
 }
 
-.mainbody{
+.mainbody {
 	
+}
+
+#main {
+	margin: 10%;
+}
+
+#result {
+	margin-left: 5%;
+	margin-top: 5%;
+}
+
+h1 {
+	text-align: center;
+}
+form#dictionary {
+    margin-top: 20px;
+}
+div#wordarea {
+    padding-left: 160px;
+}
+
+.inline-button > .col-md-10, .inline-button > .col-md-2 {
+	margin: 0px;
+	padding: 0px;
+}
+.inline-button > .col-md-10  > input#word {
+    border-radius: 2px 0px 0px 2px;
+}
+.inline-button > .col-md-2 > input {
+    border-radius: 0px 2px 2px 0px;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
